<resources>
    <string name="app_name">Glaucoma2</string>

    <string name="register_textview">Register</string>
    <string name="full_name_textView">Full Name</string>
    <string name="first_edittext_hint">First</string>
    <string name="last_edit_text_hint">Last</string>
    <string name="username_textview">Username</string>
    <string name="enter_your_username_hint">Enter your Username</string>
    <string name="password_textview">Password</string>
    <string name="confirm_password_textview">Cofirm Password</string>
    <string name="register_button">Register</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="confirm_your_password_hint">Confirm your password</string>
    <string name="have_an_account_textview">  Have an account ?</string>
    <string name="log_in_textview">Log in</string>
    <string name="glaucoma_textview">Glaucoma</string>
    <string name="login_textview">Login</string>
    <string name="title_texview">Diagnose your patients with</string>
    <string name="title_texview1">more</string>
    <string name="title_texview2">more</string>
    <string name="title_texview3">confidence and accuracy</string>
    <string name="do_not_have_an_account_textview">Do not have an account?</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="age_textView">Age</string>
    <string name="gender_textView">Gender</string>
    <string name="male_textview">Male</string>
    <string name="female_textview">Female</string>
    <string name="save_button">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_hint">Enter Email</string>
    <string name="email_textview">Email</string>
</resources>