<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.registration.RegistrationFragment">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_textview"
        android:textSize="30sp"
        android:layout_marginTop="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:text="@string/full_name_textView"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/nameLinear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="2">

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7sp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/icon_person_24"
            android:hint="@string/first_edittext_hint"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7sp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/icon_person_24"
            android:hint="@string/last_edit_text_hint"
            android:inputType="text"

            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_textview"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nameLinear"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:hint="@string/enter_your_username_hint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_textview"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/register_username_edit_text"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:drawableEnd="@drawable/icon_email_24"
        android:hint="@string/enter_your_email_hint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_textview"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/register_email_edit_text"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_textview"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_edit_text" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:hint="@string/confirm_your_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextView"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/register_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="200sp"
        android:layout_height="70sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25sp"
        android:text="@string/register_button"
        android:textSize="20sp" />


</androidx.constraintlayout.widget.ConstraintLayout>
