<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patientCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/primary_color"
    android:elevation="10sp"
    app:cardCornerRadius="20sp"
    app:cardElevation="100sp"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/myfont"
            android:gravity="center_horizontal"
            android:text="@string/add_new_patient"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/myfont"
            android:gravity="center"
            android:text="@string/full_name_textView"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"

            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3sp"
                android:layout_weight="1"
                android:hint="@string/first_edittext_hint"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:layout_weight="1"
                android:hint="@string/last_edit_text_hint"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/myfont"
            android:gravity="center"
            android:text="@string/age_textView"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/pick_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="Pick your birthday date" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/myfont"
            android:gravity="center"
            android:text="@string/gender_textView"
            android:textColor="@color/white"
            android:textSize="15sp"

            />

        <RadioGroup


            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="30sp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"

            >

            <RadioButton

                android:id="@+id/male_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/male_symbol_svgrepo_com"
                android:padding="7sp"
                android:text="@string/male_textview"
                android:textAlignment="viewStart"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton

                android:id="@+id/female_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/baseline_female_24"
                android:padding="7sp"
                android:text="@string/female_textview"
                android:textAlignment="viewStart"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <Button

            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/button_save"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/myfont"
            android:text="@string/save_button"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.cardview.widget.CardView>

